--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "biome lint --write .",
     "format": "biome format --write .",
     "format:check": "biome check --write .",
-    "check": "biome check"
+    "check": "biome check",
+    "prepare": "husky"
   },
   "dependencies": {
     "next": "15.1.7",
@@ -21,6 +22,13 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.4.3",
     "typescript": "^5"
+  },
+  "lint-staged": {
+    "**.{ts|tsx|json|scss}": [
+      "biome check --write"
+    ]
   }
 }
