--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-dom": "^19",
     "husky": "^9.1.7",
     "lint-staged": "^15.4.3",
+    "sass": "^1.85.0",
     "typescript": "^5"
   },
   "lint-staged": {
