--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build:sb": "storybook build"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "clsx": "^2.1.1",
     "next": "15.1.7",
     "react": "^19.0.0",
