fix: コードの整形と不要なメタデータの削除

--- a/package.json
+++ b/package.json
@@ -54,8 +54,6 @@
     "vitest": "^3.0.6"
   },
   "lint-staged": {
-    "**.{ts|tsx|json|scss}": [
-      "biome check --write"
-    ]
+    "**.{ts|tsx|json|scss}": ["biome check --write"]
   }
 }
