--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,9 @@
 .DS_Store
 *.pem
 
+#vscode
+.vscode
+
 # debug
 npm-debug.log*
 yarn-debug.log*
@@ -46,3 +49,4 @@ next-env.d.ts
 # cloudflare
 wrangler.toml
 /.open-next
+/.wrangler
