--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "vitest": "^3.0.6"
   },
   "lint-staged": {
-    "**.{ts|tsx|json|scss}": ["biome check --write"]
+    "**.{ts|tsx|json|scss}": [
+      "biome check --write"
+    ]
   }
 }
