--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "deploy:worker": "pnpm run build:worker && wrangler deploy"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.8.0",
     "@heroicons/react": "^2.2.0",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.41.0",
     "next": "15.1.7",
+    "next-auth": "5.0.0-beta.25",
+    "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -44,6 +48,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.30.6",
     "husky": "^9.1.7",
     "jsdom": "^26.0.0",
     "lint-staged": "^15.4.3",
@@ -54,6 +59,8 @@
     "vitest": "^3.0.6"
   },
   "lint-staged": {
-    "**.{ts|tsx|json|scss}": ["biome check --write"]
+    "**.{ts|tsx|json|scss}": [
+      "biome check --write"
+    ]
   }
 }
