--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@heroicons/react": "^2.2.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.41.0",
-    "next": "15.1.7",
+    "next": "15.4.6",
     "next-auth": "5.0.0-beta.25",
     "postgres": "^3.4.7",
     "react": "^19.1.1",
@@ -35,7 +35,7 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@chromatic-com/storybook": "^3.2.7",
-    "@opennextjs/cloudflare": "^0.5.12",
+    "@opennextjs/cloudflare": "^1.6.5",
     "@storybook/addon-essentials": "^8.6.14",
     "@storybook/addon-interactions": "^8.6.14",
     "@storybook/addon-links": "^8.6.14",
@@ -50,7 +50,7 @@
     "@types/node": "^20.19.10",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
-    "drizzle-kit": "^0.30.6",
+    "drizzle-kit": "^0.31.4",
     "husky": "^9.1.7",
     "jsdom": "^26.1.0",
     "lint-staged": "^15.5.2",
@@ -58,12 +58,18 @@
     "storybook": "^8.6.14",
     "typescript": "^5.9.2",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "wrangler": "^4.28.1"
   },
   "lint-staged": {
     "**.{ts|tsx|json|scss}": [
       "biome check --write"
     ]
+  },
+  "pnpm": {
+    "overrides": {
+      "esbuild": "^0.25.8"
+    }
   },
   "packageManager": "pnpm@10.7.1+sha512.2d92c86b7928dc8284f53494fb4201f983da65f0fb4f0d40baafa5cf628fa31dae3e5968f12466f17df7e97310e30f343a648baea1b9b350685dafafffdf5808"
 }
